--- a/src/resource/views/login.hbs
+++ b/src/resource/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="model__content form-dangky">
-                <form action="/auth/register" method="post">
+                <form action="/auth/login" method="post">
                     <div class="authen-form">
                          <div class="authen-form__header">
                              <h3 class="authen-form__text1">Đăng ký</h3>
@@ -12,9 +12,7 @@
                              <div class="authen-form__group">
                                  <input type="password" class="authen-form__input" name="password" placeholder="Nhập mật khẩu">
                              </div>
-                              {{!-- <div class="authen-form__group">
-                                 <input type="password" class="authen-form__input" name="password_confirmation" placeholder="Nhập lại mật khẩu">
-                             </div> --}}
+                              
                              {{!-- <div class="authen-form__group">
                                  <input type="password" class="authen-form__input" placeholder="Nhập lại mật khẩu">
                              </div> --}}
@@ -26,7 +24,7 @@
                          </div>
                          <div class="authen-form__controls">
                              <a class="btn authen-form__controls-back">Trở về</a>
-                             <button class="btn btn-primary btn-primary-signup" type="submit">Đăng ký</button>
+                             <button class="btn btn-primary btn-primary-signup" type="submit">login</button>
                          </div>
                         
                     </div>
